load ldap config from `application.conf`

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,7 @@
 # add or override properties
 # See https://github.com/typesafehub/config/blob/master/HOCON.md for more details
+ldap : {
+    url : "ldap://localhost:10389"
+    usersDn: "ou=people,dc=example,dc=org"
+    id: "uid"
+}
